Front page visual update
 - Change background color to a lighter shade of gray
 - Replace the `main-banner` image to a darken variant
 - Change searchbar and email-collector's input underline colors
 - Remove `Events` section header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- Events (?) -->
             <div class="container section">
                 <div class="row">
-                    <h3 class="title center-align materialize-red-text">Events</h3>
+                   <!-- <h3 class="title center-align materialize-red-text">Events</h3> -->
                     <!-- Left card image -->
                     <section class="col s6 left">
                         <div class="card">
@@ -107,8 +107,8 @@
                             <h6 class="left-align white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue non nisl quis eleifend. Aenean imperdiet pellentesque ornare. Curabitur ac lorem tincidunt eros mollis venenatis.
                                 Mauris dictum metus vel ex ornare volutpat. Ut finibus varius posuere. Etiam dictum ut ipsum faucibus congue. Phasellus porttitor tincidunt risus, vitae dapibus lacus. Pellentesque.</h6>
                         </div>
-                        <div class="col s6">
-                            <form class="input-field">
+                        <div class="col s10">
+                            <form class="input-field email-collector">
                                 <input type="text" class="white grey-text search-bar-text" placeholder="john-doe@example.com">
                             </form>
                         </div>
