--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
             </div>
 
             <!-- Email collector -->
-            <section class="section center grey darken-3">
+            <section class="section center grey darken-4">
                 <div class="container">
                     <div class="row">
                         <div class="col s12">
-                            <h3 class="title white-text">Electronic Mail</h3>
+                            <h4 class="title white-text">Electronic Mail</h4>
                             <h6 class="left-align white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue non nisl quis eleifend. Aenean imperdiet pellentesque ornare. Curabitur ac lorem tincidunt eros mollis venenatis.
                                 Mauris dictum metus vel ex ornare volutpat. Ut finibus varius posuere. Etiam dictum ut ipsum faucibus congue. Phasellus porttitor tincidunt risus, vitae dapibus lacus. Pellentesque.</h6>
                         </div>
@@ -150,6 +150,31 @@
             </section>
         </main>
 
+        <footer class="page-footer grey darken-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5>Footer</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue non nisl quis eleifend. Aenean imperdiet pellentesque ornare.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue non nisl quis eleifend. Aenean imperdiet pellentesque ornare.</p>
+                    </div>
+                    <div class="col l4 offset-l2 s12">
+                        <h5 class="white-text">About</h5>
+                        <ul>
+                            <li><a class="white-text" href="#">About Us</a></li>
+                            <li><a class="white-text" href="#">Contact</a></li>
+                            <li><a class="white-text" href="#">Opening Hours</a></li>
+                            <li><a class="white-text" href="#">Something</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright black">
+                <div class="container center-align white-text">
+                    &copy; 2018 Library - All Rights Reserved
+                </div>
+            </div>
+        </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
