Add range as text on range sliders

--- a/search.html
+++ b/search.html
@@ -78,7 +78,7 @@
 
                     <!-- Release year slider -->
                     <ul class="collection with-header">
-                        <li class="collection-header"><h6>Release Year</h6></li>
+                        <li class="collection-header"><h6>Release Year (1997 - 2009)</h6></li>
                         <li class="collection-item">
                             <div class="section">
                                 <div id="rel-year-range"></div>
@@ -136,7 +136,7 @@
 
                     <!-- Page range slider -->
                     <ul class="collection with-header">
-                        <li class="collection-header"><h6>Pages</h6></li>
+                        <li class="collection-header"><h6>Pages (30 - 400)</h6></li>
                         <li class="collection-item">
                             <div class="section">
                                 <div id="page-range"></div>
