Add templates and more

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     </p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">More Information</a>
+                                    <a href="#">More Info</a>
                                     <div class="right">
                                         <a href="#" class="disabled right">Other Events</a>
                                     </div>
@@ -87,7 +87,7 @@
                                     </p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">More Information</a>
+                                    <a href="#">More Info</a>
                                     <div class="right">
                                         <a href="#" class="disabled right">Other Events</a>
                                     </div>
